Fixed landscape orientation on mobile devices, various tweaks

--- a/src/assets/scss/site/components/_index.writing.scss
+++ b/src/assets/scss/site/components/_index.writing.scss
@@ -26,7 +26,8 @@
                         transform: scale(1.1);
                     }
                     img {
-                        max-height:160px;
+                        width:100%;
+                        max-width: rem-calc(116);
                     }
                 }
             }
